--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "07-rest-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.0",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.11.11",
-    "mongoose-unique-validator": "^2.0.3",
-    "oracledb": "^5.1.0",
-    "underscore": "^1.12.0"
-  }
+    "name": "07-rest-server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node server/server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^5.0.0",
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "mongoose": "^5.11.11",
+        "mongoose-unique-validator": "^2.0.3",
+        "oracledb": "^5.1.0",
+        "underscore": "^1.12.0"
+    }
 }
